--- a/node80.html
+++ b/node80.html
@@ -154,55 +154,55 @@ Heroku
 <LI><A NAME="tex2html2333"
   HREF="node81.html#SECTION061100140000000000000">View the logs</A>
 <LI><A NAME="tex2html2334"
-  HREF="node81.html#SECTION061100150000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
+  HREF="node81.html#SECTION061100150000000000000"><FONT COLOR="#ff0000"> heroku run bash</FONT></A>
 <LI><A NAME="tex2html2335"
-  HREF="node81.html#SECTION061100160000000000000">Rake</A>
+  HREF="node81.html#SECTION061100160000000000000"><FONT COLOR="#ff0000"> heroku run console</FONT></A>
 <LI><A NAME="tex2html2336"
-  HREF="node81.html#SECTION061100170000000000000">Using a SQL database</A>
+  HREF="node81.html#SECTION061100170000000000000">Rake</A>
 <LI><A NAME="tex2html2337"
-  HREF="node81.html#SECTION061100180000000000000">Webserver</A>
+  HREF="node81.html#SECTION061100180000000000000">Using a SQL database</A>
+<LI><A NAME="tex2html2338"
+  HREF="node81.html#SECTION061100190000000000000">Webserver</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2338"
+<LI><A NAME="tex2html2339"
   HREF="node82.html">Logging</A>
 <UL>
-<LI><A NAME="tex2html2339"
-  HREF="node82.html#SECTION06120010000000000000">Writing to your log</A>
 <LI><A NAME="tex2html2340"
-  HREF="node82.html#SECTION06120020000000000000">To fetch your logs</A>
+  HREF="node82.html#SECTION06120010000000000000">Writing to your log</A>
 <LI><A NAME="tex2html2341"
-  HREF="node82.html#SECTION06120030000000000000">Log message ordering</A>
+  HREF="node82.html#SECTION06120020000000000000">To fetch your logs</A>
 <LI><A NAME="tex2html2342"
-  HREF="node82.html#SECTION06120040000000000000">Log history limits</A>
+  HREF="node82.html#SECTION06120030000000000000">Log message ordering</A>
 <LI><A NAME="tex2html2343"
-  HREF="node82.html#SECTION06120050000000000000">Log format</A>
+  HREF="node82.html#SECTION06120040000000000000">Log history limits</A>
 <LI><A NAME="tex2html2344"
-  HREF="node82.html#SECTION06120060000000000000">Realtime tail</A>
+  HREF="node82.html#SECTION06120050000000000000">Log format</A>
 <LI><A NAME="tex2html2345"
+  HREF="node82.html#SECTION06120060000000000000">Realtime tail</A>
+<LI><A NAME="tex2html2346"
   HREF="node82.html#SECTION06120070000000000000">Filtering</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2346"
+<LI><A NAME="tex2html2347"
   HREF="node83.html">Heroku Postgress</A>
 <UL>
-<LI><A NAME="tex2html2347"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2348"
-  HREF="node83.html#SECTION06130020000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2349"
-  HREF="node83.html#SECTION06130030000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
 <LI><A NAME="tex2html2350"
-  HREF="node83.html#SECTION06130040000000000000">Establish primary DB</A>
+  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
 <LI><A NAME="tex2html2351"
-  HREF="node83.html#SECTION06130050000000000000">pg:info</A>
+  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
 <LI><A NAME="tex2html2352"
-  HREF="node83.html#SECTION06130060000000000000">pg:psql</A>
+  HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
 <LI><A NAME="tex2html2353"
-  HREF="node83.html#SECTION06130070000000000000">pg:reset</A>
+  HREF="node83.html#SECTION06130060000000000000">pg:reset</A>
 <LI><A NAME="tex2html2354"
-  HREF="node83.html#SECTION06130080000000000000">pg:pull</A>
+  HREF="node83.html#SECTION06130070000000000000">pg:pull</A>
 <LI><A NAME="tex2html2355"
-  HREF="node83.html#SECTION06130090000000000000">pg:push</A>
+  HREF="node83.html#SECTION06130080000000000000">pg:push</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html2356"
