--- a/node81.html
+++ b/node81.html
@@ -862,6 +862,8 @@ applications that only need to be executed when needed - using the
 
 <P>
 <PRE>
+[~/srcPLgrado/pegjscalc(master)]$ heroku run bash
+Running `bash` attached to terminal... up, run.2966
 ~ $ uname -a
 Linux 8f9f0a0c-b10d-4cd5-9c1e-8e87067b6be2 3.8.11-ec2 #1 SMP Fri May 3 09:11:15 UTC 2013 x86_64 GNU/Linux
 [~/srcPLgrado/pegjscalc(master)]$ heroku run bash
