--- a/node81.html
+++ b/node81.html
@@ -989,7 +989,15 @@ Rake</A>
 <P>
 Rake can be run in an attached dyno exactly like the console:
 <PRE>
-$ heroku run rake db:migrate
+[~/srcPLgrado/pegjscalc(master)]$ heroku run rake -T
+Running `rake -T` attached to terminal... up, run.2124
+rake clean  # Remove pl0.pegjs
+rake sass   # Compile public/styles.scss into public/styles.css using sass
+rake test   # tests
+rake web    # Compile pl0.pegjs browser version
+[~/srcPLgrado/pegjscalc(master)]$ heroku run rake test
+Running `rake test` attached to terminal... up, run.2082
+Not implemented (yet)
 </PRE>
 
 <P>
