--- a/node81.html
+++ b/node81.html
@@ -861,6 +861,18 @@ applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
 
 <P>
+Since your app is - in general - 
+spread across many dynos by the dyno manager, there
+is no single place to SSH into. 
+
+<P>
+
+<FONT COLOR="#0000ff"> You deploy and manage apps, not servers</FONT>.
+
+<P>
+You can invoke a shell as a one-off dyno:
+
+<P>
 <PRE>
 [~/srcPLgrado/pegjscalc(master)]$ heroku run bash
 Running `bash` attached to terminal... up, run.2966
