--- a/node81.html
+++ b/node81.html
@@ -925,6 +925,27 @@ lrwxrwxrwx 1 u20508 20508 31 2014-03-24 15:05 testrb -&gt; ../vendor/ruby-2.0.0/
 
 <P>
 
+<UL>
+<LI>When running multiple dynos, apps are distributed across several nodes
+by the dyno manager. 
+
+<P>
+</LI>
+<LI>Access to your app always goes through the routers.
+As a result, 
+<FONT COLOR="#ff0000"> dynos don’t have static IP addresses</FONT>. 
+
+<P>
+</LI>
+<LI>While you can never connect to a dyno directly, it is possible to
+originate outgoing requests from a dyno. 
+However, you can count on the
+dyno’s IP address changing as it gets restarted in different places.
+</LI>
+</UL>
+
+<P>
+
 <H4><A NAME="SECTION061100160000000000000">
 
 <FONT COLOR="#ff0000"> heroku run console</FONT></A>
