--- a/node81.html
+++ b/node81.html
@@ -926,6 +926,8 @@ lrwxrwxrwx 1 u20508 20508 31 2014-03-24 15:05 testrb -&gt; ../vendor/ruby-2.0.0/
 <P>
 
 <UL>
+<LI>The filesystem is ephemeral, and the dyno itself will only live as long as your console session.
+</LI>
 <LI>When running multiple dynos, apps are distributed across several nodes
 by the dyno manager. 
 
