--- a/node81.html
+++ b/node81.html
@@ -880,6 +880,9 @@ the platform, the console and script would only be executed when
 needed. These are <A NAME="8828"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
 
 <P>
+There are differences between one-off dynos (run with heroku run) and formation dynos 
+
+<P>
 
 <OL>
 <LI>One-off dynos run attached to your terminal, with a character-by-character
