--- a/node81.html
+++ b/node81.html
@@ -435,7 +435,7 @@ will receive HTTP traffic from Heroku’s routers.
 <OL>
 <LI>Use a  <TT>Procfile</TT> , a text file in the root directory of your
 application, to explicitly declare what command should be executed
-to start a web dyno. 
+to start a <A NAME="8787"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
 
 <P>
 </LI>
@@ -856,7 +856,7 @@ $ heroku logs
 </H4>
   
 
-Heroku allows you to run commands in a <A NAME="8824"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
+Heroku allows you to run commands in a <A NAME="8828"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
 - scripts and
 applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
@@ -874,10 +874,10 @@ is no single place to SSH into.
 You can invoke a shell as a one-off dyno.
 
 <P>
-While the web dyno would be defined in the <code>Procfile</code> 
+While the <A NAME="8832"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
 and managed by
 the platform, the console and script would only be executed when
-needed. These are <A NAME="8828"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
+needed. These are <A NAME="8834"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
 
 <P>
 There are differences between one-off dynos (run with heroku run) and formation dynos 
