--- a/node108.html
+++ b/node108.html
@@ -118,7 +118,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>acción de reducción</STRONG>
 <DD><A HREF="node49.html#6223">Construcción de las Tablas</A>
 <DT><STRONG>Active Record</STRONG>
-<DD><A HREF="node91.html#9581">Active Record</A>
+<DD><A HREF="node91.html#9587">Active Record</A>
 <DT><STRONG>algoritmo de construcción del subconjunto</STRONG>
 <DD><A HREF="node49.html#6201">Construcción de las Tablas</A>
 <DT><STRONG>antiderivación</STRONG>
@@ -161,9 +161,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><A HREF="node49.html#6229">Construcción de las Tablas</A>
  | <A HREF="node55.html#7402">Precedencia y Asociatividad</A>
 <DT><STRONG>Data Mapper</STRONG>
-<DD><A HREF="node91.html#9587">DataMapper</A>
+<DD><A HREF="node91.html#9593">DataMapper</A>
 <DT><STRONG>default context</STRONG>
-<DD><A HREF="node92.html#9633">Multiple Data-Store Connections</A>
+<DD><A HREF="node92.html#9639">Multiple Data-Store Connections</A>
 <DT><STRONG>definición dirigida por la sintáxis</STRONG>
 <DD><A HREF="node58.html#7430">Definición Dirigida por la</A>
 <DT><STRONG>devDependencies</STRONG>
@@ -230,13 +230,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Mocha TDD interface</STRONG>
 <DD><A HREF="node76.html#8186">TDD</A>
 <DT><STRONG>named context</STRONG>
-<DD><A HREF="node92.html#9635">Multiple Data-Store Connections</A>
+<DD><A HREF="node92.html#9641">Multiple Data-Store Connections</A>
 <DT><STRONG>NFA</STRONG>
 <DD><A HREF="node48.html#6191">Conceptos Básicos del Análisis</A>
 <DT><STRONG>one-off dyno</STRONG>
-<DD><A HREF="node81.html#8824"><FONT COLOR="#ff0000"> heroku run bash</FONT></A>
-<DT><STRONG>one-off dynos</STRONG>
 <DD><A HREF="node81.html#8828"><FONT COLOR="#ff0000"> heroku run bash</FONT></A>
+<DT><STRONG>one-off dynos</STRONG>
+<DD><A HREF="node81.html#8834"><FONT COLOR="#ff0000"> heroku run bash</FONT></A>
 <DT><STRONG>orden parcial</STRONG>
 <DD><A HREF="node58.html#7450">Definición Dirigida por la</A>
 <DT><STRONG>orden topológico</STRONG>
@@ -331,6 +331,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><A HREF="node16.html#2648">Ficheros</A>
 <DT><STRONG>text area</STRONG>
 <DD><A HREF="node10.html#2552">textarea, autofocus y button</A>
+<DT><STRONG>web dyno</STRONG>
+<DD><A HREF="node81.html#8787">Declare process types with</A>
+ | <A HREF="node81.html#8832"><FONT COLOR="#ff0000"> heroku run bash</FONT></A>
 <DT><STRONG>Web storage</STRONG>
 <DD><A HREF="node10.html#2558">Local Storage (HTML5 Web</A>
 <DT><STRONG>árbol  de análisis sintáctico concreto</STRONG>
