--- a/node81.html
+++ b/node81.html
@@ -435,7 +435,7 @@ will receive HTTP traffic from Heroku’s routers.
 <OL>
 <LI>Use a  <TT>Procfile</TT> , a text file in the root directory of your
 application, to explicitly declare what command should be executed
-to start a <A NAME="8787"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
+to start a <A NAME="8792"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
 
 <P>
 </LI>
@@ -789,7 +789,8 @@ Dyno sleeping and scaling</A>
 <P>
 
 <OL>
-<LI>Having only a single web dyno running will result in the dyno going
+<LI>Having only a single 
+<FONT COLOR="#ff0000"> web dyno</FONT> running will result in the dyno going
 to sleep after one hour of inactivity. 
 
 <P>
@@ -804,7 +805,8 @@ perform normally.
 
 <P>
 </LI>
-<LI>To avoid this, you can scale to more than one web dyno. For example:
+<LI>To avoid this, you can scale to more than one 
+<FONT COLOR="#ff0000"> web dyno</FONT>. For example:
 <PRE>
 $ heroku ps:scale web=2
 </PRE>
@@ -856,7 +858,7 @@ $ heroku logs
 </H4>
   
 
-Heroku allows you to run commands in a <A NAME="8828"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
+Heroku allows you to run commands in a <A NAME="8837"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
 - scripts and
 applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
@@ -874,10 +876,10 @@ is no single place to SSH into.
 You can invoke a shell as a one-off dyno.
 
 <P>
-While the <A NAME="8832"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
+While the <A NAME="8841"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
 and managed by
 the platform, the console and script would only be executed when
-needed. These are <A NAME="8834"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
+needed. These are <A NAME="8843"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
 
 <P>
 There are differences between one-off dynos (run with heroku run) and formation dynos 
