--- a/node81.html
+++ b/node81.html
@@ -435,7 +435,7 @@ will receive HTTP traffic from Heroku’s routers.
 <OL>
 <LI>Use a  <TT>Procfile</TT> , a text file in the root directory of your
 application, to explicitly declare what command should be executed
-to start a <A NAME="8792"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
+to start a <A NAME="8800"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
 
 <P>
 </LI>
@@ -858,7 +858,7 @@ $ heroku logs
 </H4>
   
 
-Heroku allows you to run commands in a <A NAME="8837"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
+Heroku allows you to run commands in a <A NAME="8845"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
 - scripts and
 applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
@@ -873,21 +873,24 @@ is no single place to SSH into.
 <FONT COLOR="#0000ff"> You deploy and manage apps, not servers</FONT>.
 
 <P>
-You can invoke a shell as a one-off dyno.
+You can invoke a shell as a 
+<FONT COLOR="#0000ff"> one-off dyno</FONT>.
 
 <P>
-While the <A NAME="8841"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
+While the <A NAME="8851"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
 and managed by
 the platform, the console and script would only be executed when
-needed. These are <A NAME="8843"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
+needed. These are <A NAME="8853"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
 
 <P>
-There are differences between one-off dynos (run with heroku run) and formation dynos 
+There are differences between 
+<FONT COLOR="#0000ff"> one-off dyno</FONT>s (run with heroku run) and formation dynos 
 
 <P>
 
 <OL>
-<LI>One-off dynos run attached to your terminal, with a character-by-character
+<LI>
+<FONT COLOR="#0000ff"> One-off dyno</FONT>s run attached to your terminal, with a character-by-character
 TCP connection for <code>STDIN</code> and <code>STDOUT</code>. 
 This allows you to use interactive
 processes like a console. 
@@ -896,17 +899,21 @@ processes like a console.
 only thing recorded in the app’s logs is the startup and shutdown of
 the dyno.
 </LI>
-<LI>One-off dynos terminate as soon as you press <code>Ctrl-C</code> or otherwise
+<LI>
+<FONT COLOR="#0000ff"> One-off dyno</FONT>s terminate as soon as you press <code>Ctrl-C</code> or otherwise
 disconnect in your local terminal. 
 </LI>
-<LI>One-off dynos never automatically
+<LI>
+<FONT COLOR="#0000ff"> One-off dyno</FONT>s never automatically
 restart, whether the process ends on its own or whether you manually
 disconnect.
 </LI>
-<LI>One-off dynos are named in the scheme <code>run.N</code> 
+<LI>
+<FONT COLOR="#0000ff"> One-off dyno</FONT>s are named in the scheme <code>run.N</code> 
 rather than the scheme <code>&lt;process-type&gt;.N</code>.
 </LI>
-<LI>One-off dynos can never receive HTTP traffic, since the routers only
+<LI>
+<FONT COLOR="#0000ff"> One-off dyno</FONT>s can never receive HTTP traffic, since the routers only
 routes traffic to dynos named <code>web.N</code>.
 </LI>
 </OL>
@@ -996,7 +1003,8 @@ dyno’s IP address changing as it gets restarted in different places.
 <P>
 
 <OL>
-<LI>Heroku allows you to run commands in a one-off dyno - scripts and
+<LI>Heroku allows you to run commands in a 
+<FONT COLOR="#0000ff"> one-off dyno</FONT> - scripts and
 applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
 
