--- a/node81.html
+++ b/node81.html
@@ -427,15 +427,16 @@ The syntax is defined as:
 <LI><code>&lt;command&gt;</code> – a command line to launch the process, such as <code>rake jobs:work</code>.
 </LI>
 </OL>
-The  <TT>web</TT>  process type is special as it’s the only process type that
-will receive HTTP traffic from Heroku’s routers.
+The  <TT>web</TT>  process type 
+<FONT COLOR="#ff0000"> is special as it’s the only process type that
+will receive HTTP traffic from Heroku’s routers</FONT>.
 
 <P>
 
 <OL>
 <LI>Use a  <TT>Procfile</TT> , a text file in the root directory of your
 application, to explicitly declare what command should be executed
-to start a <A NAME="8800"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
+to start a <A NAME="8803"></A><SPAN  CLASS="textbf">web dyno</SPAN>. 
 
 <P>
 </LI>
@@ -858,7 +859,7 @@ $ heroku logs
 </H4>
   
 
-Heroku allows you to run commands in a <A NAME="8845"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
+Heroku allows you to run commands in a <A NAME="8848"></A><SPAN  CLASS="textbf">one-off dyno</SPAN> 
 - scripts and
 applications that only need to be executed when needed - using the
 <code>heroku run</code> command. 
@@ -877,10 +878,10 @@ You can invoke a shell as a
 <FONT COLOR="#0000ff"> one-off dyno</FONT>.
 
 <P>
-While the <A NAME="8851"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
+While the <A NAME="8854"></A><SPAN  CLASS="textbf">web dyno</SPAN> would be defined in the <code>Procfile</code> 
 and managed by
 the platform, the console and script would only be executed when
-needed. These are <A NAME="8853"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
+needed. These are <A NAME="8856"></A><SPAN  CLASS="textbf">one-off dynos</SPAN>.
 
 <P>
 There are differences between 
