--- a/node91.html
+++ b/node91.html
@@ -204,7 +204,7 @@ be exposed as an object instance of the appropriate type via a property.
 Las gemas <A NAME="tex2html321"
   HREF="https://rubygems.org/gems/activerecord">activerecord</A>
 y <A NAME="tex2html322"
-  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9657"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
+  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9659"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
 
 <P>
 
@@ -259,19 +259,30 @@ transfer becomes a complexity in its own right.
 know about the relational database structure, changes in
 one tend to ripple to the other.
 </LI>
-<LI>The <A NAME="9663"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
+<LI>The <A NAME="9665"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
 objects from the database. 
 </LI>
 <LI><SPAN  CLASS="textbf">Its responsibility is to transfer data between
 the two and also to isolate them from each other</SPAN>
 </LI>
 <LI>With
-Data Mapper the in-memory objects needn't know even that there's a
-database present; they need no SQL interface code, and certainly no
-knowledge of the database schema. 
+Data Mapper 
+  
+<OL>
+<LI>the in-memory objects needn't know even that there's a
+  database present; 
+</LI>
+<LI>they need no SQL interface code, 
+</LI>
+<LI>and certainly no
+  knowledge of the database schema. 
+  
+</LI>
+</OL>
 </LI>
 <LI>(The database schema is always
-ignorant of the objects that use it.) 
+  ignorant of the objects that use it.) 
+  
 </LI>
 </OL>
 
