--- a/node91.html
+++ b/node91.html
@@ -204,7 +204,7 @@ be exposed as an object instance of the appropriate type via a property.
 Las gemas <A NAME="tex2html321"
   HREF="https://rubygems.org/gems/activerecord">activerecord</A>
 y <A NAME="tex2html322"
-  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9659"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
+  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9660"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
 
 <P>
 
@@ -232,7 +232,7 @@ DataMapper</A>
   
 
 Martin Fowler 
-(<A NAME="tex2html327"
+(<A NAME="tex2html328"
   HREF="http://martinfowler.com/eaaCatalog/index.html">Catalog of Patterns of Enterprise Application Architecture</A>):
 
 <P>
@@ -259,7 +259,7 @@ transfer becomes a complexity in its own right.
 know about the relational database structure, changes in
 one tend to ripple to the other.
 </LI>
-<LI>The <A NAME="9665"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
+<LI>The <A NAME="9666"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
 objects from the database. 
 </LI>
 <LI><SPAN  CLASS="textbf">Its responsibility is to transfer data between
@@ -287,9 +287,10 @@ Data Mapper
 </OL>
 
 <P>
-The gem <A NAME="tex2html328"
+
+<FONT COLOR="#ff0000"> The gem <A NAME="tex2html327"
   HREF="https://github.com/jgaskins/perpetuity">perpetuity</A>
-implements the DataMapper pattern.
+implements the DataMapper pattern</FONT>.
 
 <P>
 
