--- a/node108.html
+++ b/node108.html
@@ -118,7 +118,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>acción de reducción</STRONG>
 <DD><A HREF="node49.html#6223">Construcción de las Tablas</A>
 <DT><STRONG>Active Record</STRONG>
-<DD><A HREF="node91.html#9660">Active Record</A>
+<DD><A HREF="node91.html#9662">Active Record</A>
 <DT><STRONG>algoritmo de construcción del subconjunto</STRONG>
 <DD><A HREF="node49.html#6201">Construcción de las Tablas</A>
 <DT><STRONG>antiderivación</STRONG>
@@ -160,10 +160,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>conflicto shift-reduce</STRONG>
 <DD><A HREF="node49.html#6229">Construcción de las Tablas</A>
  | <A HREF="node55.html#7402">Precedencia y Asociatividad</A>
+<DT><STRONG>context</STRONG>
+<DD><A HREF="node92.html#9718">Multiple Data-Store Connections</A>
 <DT><STRONG>Data Mapper</STRONG>
-<DD><A HREF="node91.html#9666">DataMapper</A>
+<DD><A HREF="node91.html#9668">DataMapper</A>
+<DT><STRONG>data-store context</STRONG>
+<DD><A HREF="node92.html#9720">Multiple Data-Store Connections</A>
 <DT><STRONG>default context</STRONG>
-<DD><A HREF="node92.html#9716">Multiple Data-Store Connections</A>
+<DD><A HREF="node92.html#9722">Multiple Data-Store Connections</A>
 <DT><STRONG>definición dirigida por la sintáxis</STRONG>
 <DD><A HREF="node58.html#7430">Definición Dirigida por la</A>
 <DT><STRONG>devDependencies</STRONG>
@@ -230,7 +234,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Mocha TDD interface</STRONG>
 <DD><A HREF="node76.html#8186">TDD</A>
 <DT><STRONG>named context</STRONG>
-<DD><A HREF="node92.html#9718">Multiple Data-Store Connections</A>
+<DD><A HREF="node92.html#9724">Multiple Data-Store Connections</A>
 <DT><STRONG>NFA</STRONG>
 <DD><A HREF="node48.html#6191">Conceptos Básicos del Análisis</A>
 <DT><STRONG>one-off dyno</STRONG>
