--- a/node92.html
+++ b/node92.html
@@ -395,8 +395,8 @@ Multiple Data-Store Connections</A>
   
 
 <P>
-DataMapper sports a concept called a context which encapsulates the
-data-store context in which you want operations to occur. For example,
+DataMapper sports a concept called a <A NAME="9718"></A><SPAN  CLASS="textbf">context</SPAN> which encapsulates the
+<A NAME="9720"></A><SPAN  CLASS="textbf">data-store context</SPAN> in which you want operations to occur. For example,
 when you setup a connection you are defining a
 context known as <code>:default</code>
 
@@ -406,7 +406,7 @@ context known as <code>:default</code>
 </PRE>
 If you supply another context name, you will now have 2 database contexts
 with their own unique loggers, connection pool, identity map....one
-<A NAME="9716"></A><SPAN  CLASS="textbf">default context</SPAN> and one <A NAME="9718"></A><SPAN  CLASS="textbf">named context</SPAN>.
+<A NAME="9722"></A><SPAN  CLASS="textbf">default context</SPAN> and one <A NAME="9724"></A><SPAN  CLASS="textbf">named context</SPAN>.
 
 <P>
 <PRE>
