--- a/node111.html
+++ b/node111.html
@@ -173,7 +173,7 @@ on other sites, they ask for usernames and passwords.
 <FONT COLOR="#ff0000"> Not only does
 this require exposing user passwords to someone else – often the same
 passwords used for online banking and other sites – it also provides
-these application <SPAN ID="txt17646">unlimited access</SPAN> to do as they wish</FONT>. They can do
+these application <SPAN ID="txt17650">unlimited access</SPAN> to do as they wish</FONT>. They can do
 anything, including changing the passwords and lock users out.
 
 <P>
@@ -215,6 +215,16 @@ service.
 Instead, she authenticates directly with the photo sharing
 service which issues the printing service 
 delegation-specific credentials.
+
+<P>
+In OAuth, the 
+<FONT COLOR="#0000ff"> client</FONT> requests access to resources controlled
+by the 
+<FONT COLOR="#0000ff"> resource owner</FONT> and hosted by the 
+<FONT COLOR="#0000ff"> resource server</FONT>, 
+and <I>is
+issued a different set of credentials than those of the resource
+owner</I>.
 
 <P>
 
