--- a/node111.html
+++ b/node111.html
@@ -173,7 +173,7 @@ on other sites, they ask for usernames and passwords.
 <FONT COLOR="#ff0000"> Not only does
 this require exposing user passwords to someone else – often the same
 passwords used for online banking and other sites – it also provides
-these application <SPAN ID="txt17650">unlimited access</SPAN> to do as they wish</FONT>. They can do
+these application <SPAN ID="txt17659">unlimited access</SPAN> to do as they wish</FONT>. They can do
 anything, including changing the passwords and lock users out.
 
 <P>
@@ -225,6 +225,29 @@ by the
 and <I>is
 issued a different set of credentials than those of the resource
 owner</I>.
+
+<P>
+Instead of using the resource owner's credentials to access protected
+resources, the 
+<FONT COLOR="#0000ff"> client</FONT> obtains an 
+<FONT COLOR="#ff0000"> access token</FONT> 
+- <I>a string denoting a
+specific scope, lifetime, and other access attributes</I>.  
+
+<P>
+
+<FONT COLOR="#ff0000"> Access tokens</FONT>
+are issued to third-party clients by an 
+<FONT COLOR="#0000ff"> authorization server</FONT> with the
+approval of the 
+<FONT COLOR="#0000ff"> resource owner</FONT>.  
+
+<P>
+The client uses the 
+<FONT COLOR="#ff0000"> access token</FONT> to
+access the 
+<FONT COLOR="#0000ff"> protected resources</FONT> hosted by the 
+<FONT COLOR="#0000ff"> resource server</FONT>.
 
 <P>
 
