--- a/node112.html
+++ b/node112.html
@@ -159,6 +159,10 @@ The server issuing access tokens to the client after successfully
 </OL>
 
 <P>
+
+<img src="oauth-players.jpg" />
+
+<P>
 The authorization server
 may be the same server as the resource server or a separate entity.
 A single authorization server may issue access tokens accepted by
