--- a/node111.html
+++ b/node111.html
@@ -124,6 +124,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION06410000000000000000">
 Introduction to OAuth</A>
 </H1>
+OAuth 2 is rapidly becoming a preferred authorization protocol, and is used by major service providers such as Google, Facebook and Github. 
 
 <P>
 
