--- a/node111.html
+++ b/node111.html
@@ -252,6 +252,10 @@ access the
 
 <P>
 
+<img src="oauth-print-service-access-token-flow.gif" />
+
+<P>
+
 <OL>
 <LI><A NAME="tex2html550"
   HREF="http://tools.ietf.org/html/rfc6749">The OAuth 2.0 Authorization Framework</A>
