--- a/node113.html
+++ b/node113.html
@@ -134,14 +134,20 @@ for web server, installed, and client-side applications.
 2.0 credentials from the 
 <A NAME="tex2html555"
   HREF="https://cloud.google.com/console">Google Developers Console</A>. 
-See the Video in YouTube 
+</LI>
+<LI>See the Video in YouTube 
 <A NAME="tex2html556"
   HREF="http://youtu.be/Im69kzhpR3I">Obtaining a developer key for the YouTube Data API v3 and the Analytics API</A>
 </LI>
 <LI>Then your client
-application requests an access token from the Google Authorization Server,
-extracts a token from the response, and sends the token to the Google
-API that you want to access.
+application requests an 
+<FONT COLOR="#0000ff"> access token</FONT> from the 
+
+<FONT COLOR="#0000ff"> Google Authorization Server</FONT>,
+extracts a token from the response, and sends the token to the 
+
+<FONT COLOR="#0000ff"> Google API</FONT> 
+that you want to access.
 </LI>
 </OL>
 
