--- a/node110.html
+++ b/node110.html
@@ -134,34 +134,39 @@ Google Oauth
   HREF="node114.html">Sign-in with Google</A>
 <LI><A NAME="tex2html3913"
   HREF="node115.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+<UL>
 <LI><A NAME="tex2html3914"
+  HREF="node115.html#SECTION06450010000000000000">Getting Started</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html3915"
   HREF="node116.html">OmniAuth OAuth2 gem</A>
 <UL>
-<LI><A NAME="tex2html3915"
+<LI><A NAME="tex2html3916"
   HREF="node116.html#SECTION06461000000000000000">Google + API for Ruby</A>
 <UL>
-<LI><A NAME="tex2html3916"
-  HREF="node116.html#SECTION06461010000000000000">Donde</A>
 <LI><A NAME="tex2html3917"
+  HREF="node116.html#SECTION06461010000000000000">Donde</A>
+<LI><A NAME="tex2html3918"
   HREF="node116.html#SECTION06461020000000000000">Step 1: Enable the Google+ API</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html3918"
-  HREF="node117.html">Google+ Sign-In for server-side apps</A>
 <LI><A NAME="tex2html3919"
+  HREF="node117.html">Google+ Sign-In for server-side apps</A>
+<LI><A NAME="tex2html3920"
   HREF="node118.html">Authentication using the Google APIs Client Library for JavaScript</A>
 <UL>
-<LI><A NAME="tex2html3920"
+<LI><A NAME="tex2html3921"
   HREF="node118.html#SECTION06481000000000000000">Getting access keys for your application</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html3921"
-  HREF="node119.html">Auth Hash Schema</A>
 <LI><A NAME="tex2html3922"
+  HREF="node119.html">Auth Hash Schema</A>
+<LI><A NAME="tex2html3923"
   HREF="node120.html">Class: OmniAuth::AuthHash::InfoHash</A>
 <UL>
-<LI><A NAME="tex2html3923"
+<LI><A NAME="tex2html3924"
   HREF="node120.html#SECTION064100010000000000000">Schema (1.0 and Later)</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
